# sync-s3-paths

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
sync_s3_paths/: main.py  sync.py
